feature: add spacers for smaller screens

--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
                 <div id="reset-container">
                     <button id="reset" class="game-button reset-game">Reset Game</button>
                 </div>
+                <br class="spacer">
+                <br class="spacer">
                 <input type="number" id="quantity" min="1" max="13" placeholder="Pick up to 52 cards">
                 <button id="play" class="game-button">Play now</button>
                 <button id="guess" class="game-button hidden">Guess</button>
@@ -190,7 +192,7 @@
                 <h2 id="footer-logo-content">
                     <i class="fa-solid fa-heart footer-logo-icon"></i>
                     <i class="fa-solid fa-diamond footer-logo-icon"></i>
-                    <span>Memory Card Game</span>
+                    <span id="footer-logo-name">Memory Card Game</span>
                 </h2>
             </a>
         </div>
