feature: move play button to new line for small screens

--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
                 <br class="spacer">
                 <br class="spacer">
                 <input type="number" id="quantity" min="1" max="13" placeholder="Pick up to 52 cards">
+                <br class="spacer">
                 <button id="play" class="game-button">Play now</button>
                 <button id="guess" class="game-button hidden">Guess</button>
             </div>
