style: have card numbers in the length display be the length

--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
         <!-- Game area -->
         <div id = "game-area">
             <div id="length-box">
-                <p id="length-box-icon-top"><i class="fa-solid fa-hashtag"></i></p>
-                <p id="length-display">Sequence Length: <span id="sequence-length-display"></span></p>
-                <p id="length-box-icon-bottom"><i class="fa-solid fa-hashtag"></i></p>
+                <p id="length-box-icon-top"><span class="sequence-length-display"></span></p>
+                <p id="length-display">Sequence Length</p>
+                <p id="length-box-icon-bottom"><span class="sequence-length-display"></span></i></p>
             </div>
             <div class= "col-12" id="button-section">
                 <div id="reset-container">
