build: move reset button to top left

--- a/index.html
+++ b/index.html
@@ -149,15 +149,15 @@
     <main>
         <!-- Game area -->
         <div id = "game-area">
+            <div id="reset-container">
+                <button id="reset" class="game-button reset-game">Reset Game</button>
+            </div>
             <div id="length-box">
                 <p id="length-box-icon-top"><span class="sequence-length-display"></span></p>
                 <p id="length-display">Sequence Length</p>
                 <p id="length-box-icon-bottom"><span class="sequence-length-display"></span></i></p>
             </div>
-            <div class= "col-12" id="button-section">
-                <div id="reset-container">
-                    <button id="reset" class="game-button reset-game">Reset Game</button>
-                </div>
+            <div id="button-section">
                 <br class="spacer">
                 <br class="spacer">
                 <input type="number" id="quantity" min="1" max="13" placeholder="Pick up to 52 cards">
