meta: add more keywords to head element

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="memory, card, game, playing, brain, testing, fun">
+    <meta name="keywords" content="memory, card, game, playing card game, playing cards, brain, testing, fun, momorisation, memorization">
     <meta name="description" content="Enjoy a fun card memory game!">
     <meta name="author" content="Adam Michael Fairley">
 
