accessibility: show the contact-me message label and remove sequence select label

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <br>
                 <input type="email" name="email_id" id="email" placeholder="derren@brown.com" required>
                 <br>
-                <label class="hidden" for="message">Enter a message here</label>
+                <label class="contact-label" for="message">Enter a message here:</label>
                 <textarea id="contact-message" name="message" rows="10" cols="80" required></textarea>
                 <br>
                 <button class="game-button" id="modal-contact-submit">Submit</button>
@@ -160,7 +160,6 @@
             <div id="button-section">
                 <br class="spacer">
                 <br class="spacer">
-                <label for="sequence-select" class="hidden">Select a quantity of cards</label>
                 <input type="number" id="quantity" name="sequence-select" min="1" max="52" placeholder="Pick up to 52 cards">
                 <br class="spacer">
                 <button id="play" class="game-button">Play now</button>
