accessibility: fix contact form labels

--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
                 <br>
                 <input type="text" name="from_name" id="name" placeholder="Derren Brown" required>
                 <br>
-                <label class="contact-label" for="email" id="email">Email</label>
+                <label class="contact-label" for="email">Email</label>
                 <br>
                 <input type="email" name="email_id" id="email" placeholder="derren@brown.com" required>
                 <br>
-                <label class="contact-label" for="message">Enter a message here:</label>
+                <label class="contact-label" for="contact-message">Enter a message here:</label>
                 <textarea id="contact-message" name="message" rows="10" cols="80" required></textarea>
                 <br>
                 <button class="game-button" id="modal-contact-submit">Submit</button>
