--- a/404.html
+++ b/404.html
@@ -30,44 +30,6 @@
     <title>Memory Card Game</title>
 </head>
 <body>
-    <!-- Modals -->
-        <!-- Contact me modal -->
-        <div class="game-modal" id="contact-me-modal">
-            <div class="modal-container">
-                <h2 id="modal-contact-header">&#9824 &#9830 &#9827 &#9829 <br>Contact me!</h2>
-                <div id="modal-contact-text">
-                    <p id="contact-text">Contact me for more information, collaboration opportunites or to give feedback.</p>
-                </div>
-                <form id="contact-me-form">
-                    <label class="contact-label" for="name">Name</label>
-                    <br>
-                    <input type="text" name="from_name" id="name" placeholder="Derren Brown" required>
-                    <br>
-                    <label class="contact-label" for="email" id="email">Email</label>
-                    <br>
-                    <input type="email" name="email_id" id="email" placeholder="derren@brown.com" required>
-                    <br>
-                    <textarea id="contact-message" name="message" rows="10" cols="80" required></textarea>
-                    <br>
-                    <button class="game-button" id="modal-contact-submit">Submit</button>
-                </form>
-                <button class="game-button" id="modal-contact-close">Close</button>
-            </div>
-        </div>
-        <!-- How to play modal -->
-        <div class="game-modal" id="how-to-play-modal">
-            <div class="modal-container">
-                <h2 id="modal-how-to-play-header">How to play</h2>
-                <p id="how-to-intro">The goal is to memorise the order of shuffled playing cards. Can you memorise the whole deck?</p>
-                <div id="modal-how-to-play-text">
-                    <p>&#9824 Choose between 1 and 52 cards to memorise and enter this value into the box.</p>
-                    <p>&#9830 Click play now to lock in your choice and display the cards</p>
-                    <p>&#9827 When you have memorised the cards, click on guess to hide the cards</p>   
-                    <p>&#9829 Test your memory by filling out the order of the cards in the table. Submit your answers to see if you are right!</p>
-                </div>
-                <button class="game-button" id="modal-how-to-play-button">Close</button>
-            </div>
-        </div>
     <!-- Navigation bar -->
     <header class="container-fluid row g-0" id="header-section">
         <!-- Logo -->
@@ -107,7 +69,45 @@
             </nav>
         </div>
     </header>
-    
+    <!-- Modals -->
+    <!-- Contact me modal -->
+    <aside class="game-modal" id="contact-me-modal">
+        <div class="modal-container">
+            <h2 id="modal-contact-header">&#9824 &#9830 &#9827 &#9829 <br>Contact me!</h2>
+            <div id="modal-contact-text">
+                <p id="contact-text">Contact me for more information, collaboration opportunites or to give feedback.</p>
+            </div>
+            <form id="contact-me-form">
+                <label class="contact-label" for="name">Name</label>
+                <br>
+                <input type="text" name="from_name" id="name" placeholder="Derren Brown" required>
+                <br>
+                <label class="contact-label" for="email">Email</label>
+                <br>
+                <input type="email" name="email_id" id="email" placeholder="derren@brown.com" required>
+                <br>
+                <label class="contact-label" for="contact-message">Enter a message here:</label>
+                <textarea id="contact-message" name="message" rows="10" cols="80" required></textarea>
+                <br>
+                <button class="game-button" id="modal-contact-submit">Submit</button>
+            </form>
+            <button class="game-button" id="modal-contact-close">Close</button>
+        </div>
+    </aside>
+    <!-- How to play modal -->
+    <aside class="game-modal" id="how-to-play-modal">
+        <div class="modal-container">
+            <h2 id="modal-how-to-play-header">How to play</h2>
+            <p id="how-to-intro">The goal is to memorise the order of shuffled playing cards. Can you memorise the whole deck?</p>
+            <div id="modal-how-to-play-text">
+                <p>&#9824 Choose between 1 and 52 cards to memorise and enter this value into the box.</p>
+                <p>&#9830 Click play now to lock in your choice and display the cards</p>
+                <p>&#9827 When you have memorised the cards, click on guess to hide the cards</p>   
+                <p>&#9829 Test your memory by filling out the order of the cards in the table. Submit your answers to see if you are right!</p>
+            </div>
+            <button class="game-button" id="modal-how-to-play-button">Close</button>
+        </div>
+    </aside>
     <main id="main-404">
         <div id="display-404">
             <p id="top-404">404</p>
@@ -118,7 +118,7 @@
         </div> 
     </main>
 
-        <!-- Footer -->
+    <!-- Footer -->
     <footer id="footer" class="container-fluid row g-0">
         <!-- Site Logo -->
         <div id="footer-logo">
@@ -139,7 +139,7 @@
         </div>
     </footer>
 
-        <!-- Bootstrap javascript link-->
+    <!-- Bootstrap javascript link-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
