--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
             <div id="button-section">
                 <br class="spacer">
                 <br class="spacer">
+                <label id = "quantity-label" for="quantity">Enter number of cards:</label>
+                <br class="spacer">
                 <input type="number" id="quantity" name="sequence-select" min="1" max="52" placeholder="Pick up to 52 cards">
                 <br class="spacer">
                 <button id="play" class="game-button">Play now</button>
