--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <li class = "nav-list-item">
                         <div class="nav-link-black" id="how-to-play-modal-link">
                             <p class="nav-icon-top"><i class="fa-regular fa-circle-question"></i></p>
-                            <p class="nav-item-name" id="how-to-play-text">
+                            <p class="nav-item-name">
                                 How to play
                             </p>
                             <p class="nav-icon-bottom" id="nav-icon-bottom-how"><i class="fa-regular fa-circle-question"></i></p>
@@ -59,7 +59,7 @@
                     <li class = "nav-list-item">
                         <div class="nav-link-red" id="contact-modal-link">
                             <p class = "nav-icon-top"><i class="fa-regular fa-address-book"></i></p>
-                            <p class="nav-item-name" id="contact-me-text">
+                            <p class="nav-item-name">
                                 Contact me
                             </p>
                             <p class="nav-icon-bottom" id="nav-icon-bottom-contact"><i class="fa-regular fa-address-book"></i></p>
