--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <p class="nav-item-name">
                                 How to play
                             </p>
-                            <p class="nav-icon-bottom" id="nav-icon-bottom-how"><i class="fa-regular fa-circle-question"></i></p>
+                            <p class="nav-icon-bottom"><i class="fa-regular fa-circle-question"></i></p>
                         </div>
                     </li>
                     <li class = "nav-list-item">
@@ -62,7 +62,7 @@
                             <p class="nav-item-name">
                                 Contact me
                             </p>
-                            <p class="nav-icon-bottom" id="nav-icon-bottom-contact"><i class="fa-regular fa-address-book"></i></p>
+                            <p class="nav-icon-bottom"><i class="fa-regular fa-address-book"></i></p>
                         </div>
                     </li>
                 </ul>
