style: update the 404 page link styling

--- a/404.html
+++ b/404.html
@@ -114,7 +114,9 @@
             <p id="top-404">404</p>
             <h2 id="header-404">Oops!</h2>
             <p id="message-404">You've taken a wrong turn! </p>
-            <a href="index.html" id="link-404">Come back and join us on the game page.</a>
+            <div id = "link-404-container">
+                <a href="index.html" id="link-404">Come back and join us on the game page.</a>
+            </div>
             <p id="bottom-404">404</p>
         </div> 
     </main>
