build: add title to guessing table

--- a/index.html
+++ b/index.html
@@ -167,8 +167,10 @@
                 <button id="play" class="game-button">Play now</button>
                 <button id="guess" class="game-button hidden">Guess</button>
             </div>
-            <div id="table-container">
-                <table id="guessing-table" class="hidden">
+            <div id="table-container" class="hidden">
+                <h2 id = "table-title">Guess the shuffled card sequence:</h2>
+                <br>
+                <table id="guessing-table">
                     <thead>
                         <tr>
                             <th scope="col" class="order-column">Order</th>
