update: add more information to the how to play modal

--- a/404.html
+++ b/404.html
@@ -100,10 +100,13 @@
             <h2 id="modal-how-to-play-header">How to play</h2>
             <p id="how-to-intro">The goal is to memorise the order of shuffled playing cards. Can you memorise the whole deck?</p>
             <div id="modal-how-to-play-text">
-                <p>&#9824; Choose between 1 and 52 cards to memorise and enter this value into the box.</p>
-                <p>&#9830; Click play now to lock in your choice and display the cards</p>
-                <p>&#9827; When you have memorised the cards, click on guess to hide the cards</p>   
-                <p>&#9829; Test your memory by filling out the order of the cards in the table. Submit your answers to see if you are right!</p>
+                <p>&#9824; Choose between 1 and 52 cards to memorise and enter this value into the box. If you are just starting out, trying to memorise a lower number of cards is recommended.</p>
+                <p>&#9830; Click play now to lock in your choice and display the cards on screen.</p>
+                <p>&#9827; Take your time to memorise the cards, a neat trick is to assign a character or object to each card and have them appear sequentially in a story!</p> 
+                <p>&#9829; When you think you are ready, click on the guess button to hide the cards.</p>   
+                <p>&#9824; Test your memory by filling out the order of the cards in the table by selecting the card values and suits. Submit your answers to see if you are right!</p>
+                <p>&#9830; Your final score will appear when you have submitted all of your answers! Here you can click close to review your answers or play again to reset the game.</p>
+                <p>&#9827; You can click the reset game button at any time to start over with less cards if you're finding it tricky. Keep it up and you'll be able to memorise an entire deck of cards in no time!</p>
             </div>
             <button class="game-button" id="modal-how-to-play-button">Close</button>
         </div>
