update: add accessibility labels

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <input type="number" id="quantity" name="sequence-select" min="1" max="52" placeholder="Pick up to 52 cards">
                 <br class="spacer">
                 <button id="play" class="game-button" aria-label="Submit sequence length and start the game">Play now</button>
-                <button id="guess" class="game-button hidden">Guess</button>
+                <button id="guess" class="game-button hidden" aria-label="Hide the cards and advance to the guessing stage">Guess</button>
             </div>
             <div id="table-container" class="hidden">
                 <h2 id = "table-title">Guess the shuffled card sequence:</h2>
