--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
 
     <title>Memory Card Game</title>
 </head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PXSS0CS8J9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PXSS0CS8J9');
+</script>
 <body>
     <!-- Navigation bar -->
     <header class="container-fluid row g-0" id="header-section">
