security: obfuscate emailjs public key

--- a/index.html
+++ b/index.html
@@ -230,12 +230,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <!-- initialise emailjs-->
     <script>
-        (function() {
-            // https://dashboard.emailjs.com/admin/account
-            emailjs.init({
-              publicKey: "5Il-1n7VCJG_mw70w",
-            });
-        })();
+        (function(_0xf789cc,_0x25c114){var _0x7bce6d=_0x5215,_0x479cf6=_0xf789cc();while(!![]){try{var _0x1ace72=-parseInt(_0x7bce6d(0x101))/0x1*(parseInt(_0x7bce6d(0xfa))/0x2)+parseInt(_0x7bce6d(0x100))/0x3*(-parseInt(_0x7bce6d(0xf7))/0x4)+parseInt(_0x7bce6d(0xff))/0x5*(-parseInt(_0x7bce6d(0xfd))/0x6)+-parseInt(_0x7bce6d(0xf6))/0x7*(-parseInt(_0x7bce6d(0xfe))/0x8)+parseInt(_0x7bce6d(0xfc))/0x9+parseInt(_0x7bce6d(0xf9))/0xa+parseInt(_0x7bce6d(0xf8))/0xb*(parseInt(_0x7bce6d(0xfb))/0xc);if(_0x1ace72===_0x25c114)break;else _0x479cf6['push'](_0x479cf6['shift']());}catch(_0x2b5306){_0x479cf6['push'](_0x479cf6['shift']());}}}(_0x247f,0xc1df3),(function(){emailjs['init']({'publicKey':'5Il-1n7VCJG_mw70w'});}()));function _0x5215(_0x353a77,_0x4f3f1d){var _0x247f40=_0x247f();return _0x5215=function(_0x52157c,_0x1157e8){_0x52157c=_0x52157c-0xf6;var _0xb69795=_0x247f40[_0x52157c];return _0xb69795;},_0x5215(_0x353a77,_0x4f3f1d);}function _0x247f(){var _0x35bdbb=['8686370yZGlwi','314dvSCnL','21360348EYihkr','7658721vPbMUh','4182CYtsRP','8zXggRY','9695RHIoQz','3158247HZOQGP','5053jlfnEj','3444119MYoLqo','4qrNPHH','11hKiDHU'];_0x247f=function(){return _0x35bdbb;};return _0x247f();}
     </script>
     <!-- Link emailjs.js -->
     <script src="assets/scripts/emailjs.js"></script>
