refactor: move google analytics script to head element

--- a/404.html
+++ b/404.html
@@ -26,17 +26,19 @@
     <!-- jQuery link -->
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 
+    <!-- Google analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PXSS0CS8J9"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-PXSS0CS8J9');
+    </script>
 
     <title>Memory Card Game</title>
 </head>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-PXSS0CS8J9"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-PXSS0CS8J9');
-</script>
 <body>
     <!-- Navigation bar -->
     <header class="container-fluid row g-0" id="header-section">
